--- a/index.html
+++ b/index.html
@@ -5,100 +5,132 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Click&Shop</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="./estilos/estilos.css">
 </head>
 
 <body>
-    <header>
-        <section class="container-header">
-            <a href="../index.html">
-                <img src="../assets/Logo.png" alt="Imagen de Click&Shop" class="logo">
+    <!-- ===== ENCABEZADO ===== -->
+    <header class="encabezado">
+        <section class="encabezado__contenido">
+            <a href="./index.html" class="encabezado__marca">
+                <img src="./assets/Logo.png" alt="Imagen de Click&Shop" class="encabezado__logo">
             </a>
-            <h1 class="titulos">Inicio</h1>
-            <nav>
-                <div class="ventanas">
-                    <ul>
-                        <li class="link">
-                            <a href="./index.html" style="text-decoration: none;">Inicio</a>
-                        </li>
-                        <li class="link">
-                            <a href="./ventanas/informacion.html" style="text-decoration: none;">Información de
-                                nosotros</a>
-                        </li>
-                        <li class="link">
-                            <a href="./ventanas/catalogo.html" style="text-decoration: none;">Catálogo</a>
-                        </li>
-                        <li class="link">
-                            <a href="./ventanas/carrito.html" style="text-decoration: none;">Carrito</a>
-                        </li>
-                        <li class="link">
-                            <a href="./ventanas/recetas.html" style="text-decoration: none;">Recetas</a>
-                        </li>
-                        <li class="link">
-                            <a href="./ventanas/contacto.html" style="text-decoration: none;">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
+
+            <!-- Título de la página -->
+            <h1 class="encabezado__titulo">Inicio</h1>
+
+            <!-- Navegación principal -->
+            <nav class="navegacion-principal">
+                <ul class="navegacion-principal__lista">
+                    <li class="navegacion-principal__item navegacion-principal__item--activo">
+                        <a href="./index.html" style="text-decoration: none;" class="navegacion-principal__enlace">Inicio</a>
+                    </li>
+                    <li class="navegacion-principal__item">
+                        <a href="./ventanas/informacion.html" style="text-decoration: none;"
+                            class="navegacion-principal__enlace">Información de
+                            nosotros</a>
+                    </li>
+                    <li class="navegacion-principal__item">
+                        <a href="./ventanas/catalogo.html" style="text-decoration: none;"
+                            class="navegacion-principal__enlace">Catálogo</a>
+                    </li>
+                    <li class="navegacion-principal__item">
+                        <a href="./ventanas/carrito.html" style="text-decoration: none;"
+                            class="navegacion-principal__enlace">Carrito</a>
+                    </li>
+                    <li class="navegacion-principal__item">
+                        <a href="./ventanas/recetas.html" style="text-decoration: none;"
+                            class="navegacion-principal__enlace">Recetas</a>
+                    </li>
+                    <li class="navegacion-principal__item">
+                        <a href="./ventanas/contacto.html" style="text-decoration: none;"
+                            class="navegacion-principal__enlace">Contacto</a>
+                    </li>
+                </ul>
             </nav>
         </section>
     </header>
 
-    <main>
-        <img src="./assets/Imagen del carrusel.png" alt="carrusel">
-        <img src="./assets/Imagen del carrusel 2.png" alt="carrusel">
+    <!-- ===== CONTENIDO PRINCIPAL ===== -->
+    <main class="principal">
 
-        <form>
-            <h2>Iniciar sesión:</h2>
-            <label>Usurario:</label>
-            <input type="text">
-            <label>Contraseña:</label>
-            <input type="password">
-            <input type="submit" value="Ingresar">
-        </form>
+        <!-- Sección destacada / carrusel -->
+        <section class="destacado">
+            <img src="./assets/Imagen del carrusel.png" alt="carrusel" class="destacado__imagen">
+            <img src="./assets/Imagen del carrusel 2.png" alt="carrusel" class="destacado__imagen">
+        </section>
+
+        <!-- Formulario de inicio de sesión -->
+        <section class="acceso">
+            <form class="acceso__formulario">
+                <h2 class="acceso__titulo">Iniciar sesión:</h2>
+                <label class="acceso__etiqueta">Usurario:</label>
+                <input type="text" class="acceso__campo acceso__campo--texto">
+                <label class="acceso__etiqueta">Contraseña:</label>
+                <input type="password" class="acceso__campo acceso__campo--clave">
+                <input type="submit" value="Ingresar" class="acceso__boton">
+            </form>
+        </section>
 
         <!--Descripción del Supermercado-->
-        <h3 id="Descripción">Descripción</h3>
-        <p><strong>Click&Shop</strong> es tu supermercado online moderno, práctico y confiable. Nuestra misión es
-            que hacer las compras sea una experiencia rápida, cómoda y sencilla, sin moverte de tu casa.</p>
-        <p>Con solo unos clics, podés acceder a una amplia variedad de productos: alimentos frescos, bebidas,
-            limpieza, perfumería, artículos de hogar y mucho más. Todo al mejor precio y con la garantía de recibir
-            tu pedido directamente en la puerta de tu casa.</p>
-        <p>💜 En <strong>Click&Shop</strong> combinamos tecnología, calidad y cercanía para transformar la forma en
-            que hacés tus compras. Nuestra plataforma está diseñada para que disfrutes de un proceso simple, seguro
-            y rápido, con promociones exclusivas y entregas a tiempo.</p>
-        <p>👉 Porque tu tiempo vale, nosotros lo cuidamos. <strong>Click&Shop</strong>: elegí, clickeá y recibí.</p>
+        <section class="descripcion-tienda" id="Descripción">
+            <h3 class="descripcion-tienda__titulo">Descripción</h3>
+            <p class="descripcion-tienda__parrafo"><strong>Click&Shop</strong> es tu supermercado online moderno,
+                práctico y confiable. Nuestra misión es
+                que hacer las compras sea una experiencia rápida, cómoda y sencilla, sin moverte de tu casa.</p>
+            <p class="descripcion-tienda__parrafo">Con solo unos clics, podés acceder a una amplia variedad de
+                productos: alimentos frescos, bebidas,
+                limpieza, perfumería, artículos de hogar y mucho más. Todo al mejor precio y con la garantía de recibir
+                tu pedido directamente en la puerta de tu casa.</p>
+            <p class="descripcion-tienda__parrafo">💜 En <strong>Click&Shop</strong> combinamos tecnología, calidad y
+                cercanía para transformar la forma en
+                que hacés tus compras. Nuestra plataforma está diseñada para que disfrutes de un proceso simple, seguro
+                y rápido, con promociones exclusivas y entregas a tiempo.</p>
+            <p class="descripcion-tienda__parrafo">👉 Porque tu tiempo vale, nosotros lo cuidamos.
+                <strong>Click&Shop</strong>: elegí, clickeá y recibí.
+            </p>
+        </section>
 
-        <br>
-        <section class="whatsapp">
-            <a href="https://wa.me/5492477454622" target="_blank">
-                <img src="../assets/whatsapp.png" alt="WhatsApp" class="imagenw">
+        <!-- Botón flotante de WhatsApp -->
+        <section class="boton-whatsapp">
+            <a href="https://wa.me/5492477454622" target="_blank" class="boton-whatsapp__enlace">
+                <img src="./assets/whatsapp.png" alt="WhatsApp" class="boton-whatsapp__icono">
             </a>
         </section>
     </main>
 
-    <footer>
-        <section>
-            <h3>Derechos reservados de autor // Creado por Juan Fram</h3>
+    <!-- ===== PIE DE PÁGINA ===== -->
+    <footer class="pie">
+        <section class="pie__superior">
+            <h3 class="pie__legal">Derechos reservados de autor // Creado por Juan Fram</h3>
         </section>
-        <ul class="redes-sociales">
-            <li>
-                <img src="./assets/instagram.png" alt="Logo Instagram" class="imgredes">
+
+        <!-- Redes sociales -->
+        <ul class="redes">
+            <li class="redes__item">
+                <img src="./assets/instagram.png" alt="Logo Instagram" class="redes__icono">
                 <a href="https://www.instagram.com/juanfram5/?next=%2F" target="_blank" style="text-decoration: none;"
-                    class="redes">Instagram</a>
+                    class="redes__link">Instagram</a>
             </li>
-            <li>
-                <img src="./assets/facebook.png" alt="Logo Facebook" class="imgredes">
+            <li class="redes__item">
+                <img src="./assets/facebook.png" alt="Logo Facebook" class="redes__icono">
                 <a href="https://www.facebook.com/juan.fran.334" target="_blank" style="text-decoration: none;"
-                    class="redes">Facebook</a>
-            </li>
+                    class="redes__link">Facebook</a>
+            </li class="redes__item">
             <li>
-                <img src="./assets/linkedin.png" alt="Logo Linkedin" class="imgredes">
+                <img src="./assets/linkedin.png" alt="Logo Linkedin" class="redes__icono">
                 <a href="https://www.linkedin.com/in/juanfram-networking/" target="_blank"
-                    style="text-decoration: none;" class="redes">Linkedin</a>
+                    style="text-decoration: none;" class="redes__link">Linkedin</a>
             </li>
         </ul>
-        <h4>Click&Shop</h4>
+        <h4 class="pie__marca">Click&Shop</h4>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
