--- a/ventanas/carrito.html
+++ b/ventanas/carrito.html
@@ -5,89 +5,121 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrito</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
 
 <body>
-    <header>
-        <section class="container-header">
-            <a href="../index.html">
-                <img src="../assets/Logo.png" alt="Imagen de Click&Shop" class="logo">
+
+    <!-- ===== ENCABEZADO ===== -->
+    <header class="encabezado">
+        <section class="encabezado__contenido">
+            <a href="../index.html" class="encabezado__marca">
+                <img src="../assets/Logo.png" alt="Imagen de Click&Shop" class="encabezado__logo">
             </a>
-            <h1 class="titulos">Carrito</h1>
-            <nav>
-                <div class="ventanas">
-                    <ul>
-                        <li class="link">
-                            <a href="../index.html" style="text-decoration: none;">Inicio</a>
-                        </li>
-                        <li class="link">
-                            <a href="./informacion.html " style="text-decoration: none;">Información de
-                                nosotros</a>
-                        </li>
-                        <li class="link">
-                            <a href="./catalogo.html" style="text-decoration: none;">Catálogo</a>
-                        </li>
-                        <li class="link">
-                            <a href="./carrito.html" style="text-decoration: none;">Carrito</a>
-                        </li>
-                        <li class="link">
-                            <a href="./recetas.html" style="text-decoration: none;">Recetas</a>
-                        </li>
-                        <li class="link">
-                            <a href="./contacto.html" style="text-decoration: none;">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
+
+            <!-- Título de la página -->
+            <h1 class="encabezado__titulo">Carrito</h1>
+
+            <!-- Navegación principal -->
+            <nav class="navegacion-principal">
+                <ul class="navegacion-principal__lista">
+                    <li class="navegacion-principal__item">
+                        <a href="../index.html" style="text-decoration: none;"
+                            class="navegacion-principal__enlace">Inicio</a>
+                    </li>
+                    <li class="navegacion-principal__item">
+                        <a href="./informacion.html" style="text-decoration: none;"
+                            class="navegacion-principal__enlace">Información de
+                            nosotros</a>
+                    </li>
+                    <li class="navegacion-principal__item">
+                        <a href="./catalogo.html" style="text-decoration: none;"
+                            class="navegacion-principal__enlace">Catálogo</a>
+                    </li>
+                    <li class="navegacion-principal__item navegacion-principal__item--activo">
+                        <a href="./carrito.html" style="text-decoration: none;"
+                            class="navegacion-principal__enlace">Carrito</a>
+                    </li>
+                    <li class="navegacion-principal__item">
+                        <a href="./recetas.html" style="text-decoration: none;"
+                            class="navegacion-principal__enlace">Recetas</a>
+                    </li>
+                    <li class="navegacion-principal__item">
+                        <a href="./contacto.html" style="text-decoration: none;"
+                            class="navegacion-principal__enlace">Contacto</a>
+                    </li>
+                </ul>
             </nav>
         </section>
     </header>
 
-    <main>
+    <!-- ===== CONTENIDO PRINCIPAL ===== -->
+    <main class="principal">
         <!--Productos en el carrito-->
-        <h3>Productos en el carrito</h3>
-        <p></p>
-        <br>
-        <section class="whatsapp">
-            <a href="https://wa.me/5492477454622" target="_blank">
-                <img src="../assets/whatsapp.png" alt="WhatsApp" class="imagenw">
-            </a>
-        </section>
-        <section class="carritotabla">
-            <div class="tabla">Producto</div>
-            <div class="tabla">Cantidad</div>
-            <div class="tabla">Subtotal</div>
-        </section>
         <section>
-            <div class="tabla2"></div>
-            <div class="tabla2"></div>
-            <div class="tabla2"></div>
+
+            <article class="compras">
+                <h3 class="compras__titulo">
+                    Productos en el carrito
+                </h3>
+                <p class="compras__parrafo"></p>
+            </article>
+
+            <article class="carritotabla">
+                <div class="tabla">Producto</div>
+                <div class="tabla">Cantidad</div>
+                <div class="tabla">Subtotal</div>
+            </article>
+            <article class="carritotabla2">
+                <div class="tabla2"></div>
+                <div class="tabla2"></div>
+                <div class="tabla2"></div>
+            </article>
+        </section>
+
+        <!-- Botón flotante de WhatsApp -->
+        <section class="boton-whatsapp">
+            <a href="https://wa.me/5492477454622" target="_blank" class="boton-whatsapp__enlace">
+                <img src="../assets/whatsapp.png" alt="WhatsApp" class="boton-whatsapp__icono">
+            </a>
         </section>
     </main>
 
-    <footer>
-        <section>
-            <h3>Derechos reservados de autor // Creado por Juan Fram</h3>
+    <!-- ===== PIE DE PÁGINA ===== -->
+    <footer class="pie">
+        <section class="pie__superior">
+            <h3 class="pie__legal">
+                Derechos reservados de autor // Creado por Juan Fram
+            </h3>
         </section>
-        <ul class="redes-sociales">
-            <li>
-                <img src="../assets/instagram.png" alt="Logo Instagram" class="imgredes">
-                <a href="https://www.instagram.com/juanfram5/?next=%2F" target="_blank" style="text-decoration: none;"
-                    class="redes">Instagram</a>
+
+        <ul class="redes">
+            <li class="redes__item">
+                <img src="../assets/instagram.png" alt="Logo Instagram" class="redes__icono">
+                <a href="https://www.instagram.com/juanfram5/?next=%2F" target="_blank"
+                    class="redes__link">Instagram</a>
             </li>
-            <li>
-                <img src="../assets/facebook.png" alt="Logo Facebook" class="imgredes">
-                <a href="https://www.facebook.com/juan.fran.334" target="_blank" style="text-decoration: none;"
-                    class="redes">Facebook</a>
+
+            <li class="redes__item">
+                <img src="../assets/facebook.png" alt="Logo Facebook" class="redes__icono">
+                <a href="https://www.facebook.com/juan.fran.334" target="_blank" class="redes__link">Facebook</a>
             </li>
-            <li>
-                <img src="../assets/linkedin.png" alt="Logo Linkedin" class="imgredes">
+
+            <li class="redes__item">
+                <img src="../assets/linkedin.png" alt="Logo Linkedin" class="redes__icono">
                 <a href="https://www.linkedin.com/in/juanfram-networking/" target="_blank"
-                    style="text-decoration: none;" class="redes">Linkedin</a>
+                    class="redes__link">Linkedin</a>
             </li>
         </ul>
-        <h4>Click&Shop</h4>
+
+        <h4 class="pie__marca">Click&Shop</h4>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
