--- a/ventanas/contacto.html
+++ b/ventanas/contacto.html
@@ -5,109 +5,157 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
 
 <body>
-    <header>
-        <section class="container-header">
-            <a href="../index.html">
-                <img src="../assets/Logo.png" alt="Imagen de Click&Shop" class="logo">
+
+    <!-- ===== ENCABEZADO ===== -->
+    <header class="encabezado">
+        <section class="encabezado__contenido">
+            <a href="../index.html" class="encabezado__marca">
+                <img src="../assets/Logo.png" alt="Imagen de Click&Shop" class="encabezado__logo">
             </a>
-            <h1 class="titulos">Contacto</h1>
-            <nav>
-                <div class="ventanas">
-                    <ul>
-                        <li class="link">
-                            <a href="../index.html" style="text-decoration: none;">Inicio</a>
-                        </li>
-                        <li class="link">
-                            <a href="./informacion.html " style="text-decoration: none;">Información de
-                                nosotros</a>
-                        </li>
-                        <li class="link">
-                            <a href="./catalogo.html" style="text-decoration: none;">Catálogo</a>
-                        </li>
-                        <li class="link">
-                            <a href="./carrito.html" style="text-decoration: none;">Carrito</a>
-                        </li>
-                        <li class="link">
-                            <a href="./recetas.html" style="text-decoration: none;">Recetas</a>
-                        </li>
-                        <li class="link">
-                            <a href="./contacto.html" style="text-decoration: none;">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
+
+            <!-- Título de la página -->
+            <h1 class="encabezado__titulo">Catálogo</h1>
+
+            <!-- Navegación principal -->
+            <nav class="navegacion-principal">
+                <ul class="navegacion-principal__lista">
+                    <li class="navegacion-principal__item">
+                        <a href="../index.html" style="text-decoration: none;"
+                            class="navegacion-principal__enlace">Inicio</a>
+                    </li>
+                    <li class="navegacion-principal__item">
+                        <a href="./informacion.html" style="text-decoration: none;"
+                            class="navegacion-principal__enlace">Información de
+                            nosotros</a>
+                    </li>
+                    <li class="navegacion-principal__item">
+                        <a href="./catalogo.html" style="text-decoration: none;"
+                            class="navegacion-principal__enlace">Catálogo</a>
+                    </li>
+                    <li class="navegacion-principal__item">
+                        <a href="./carrito.html" style="text-decoration: none;"
+                            class="navegacion-principal__enlace">Carrito</a>
+                    </li>
+                    <li class="navegacion-principal__item">
+                        <a href="./recetas.html" style="text-decoration: none;"
+                            class="navegacion-principal__enlace">Recetas</a>
+                    </li>
+                    <li class="navegacion-principal__item navegacion-principal__item--activo">
+                        <a href="./contacto.html" style="text-decoration: none;"
+                            class="navegacion-principal__enlace">Contacto</a>
+                    </li>
+                </ul>
             </nav>
         </section>
     </header>
 
-    <main>
-        <!--Recetas-->
-        <h2>Contactate con nosotros, que en la brevedad te responderemos</h2>
-        <form>
-            <label class="label">Nombre:</label>
-            <input type="text">
-            <label class="label">Celular:</label>
-            <input type="tel">
-            <label class="label">Email:</label>
-            <input type="email">
-            <label class="label">Mensaje:</label>
-            <textarea></textarea>
-            <input type="submit" value="Enviar">
-            <input type="reset" value="Reiniciar">
-        </form>
-        <hr>
-        <section>
-            <section>
+    <!-- ===== CONTENIDO PRINCIPAL ===== -->
+    <main class="principal principal--contacto">
+
+        <!-- Bloque contacto -->
+        <section class="contacto">
+            <h2 class="contacto__titulo">
+                Contactate con nosotros, que en la brevedad te responderemos
+            </h2>
+
+            <form class="contacto__formulario">
+                <label class="contacto__etiqueta" for="nombre">Nombre:</label>
+                <input id="nombre" type="text" class="contacto__campo contacto__campo--texto">
+
+                <label class="contacto__etiqueta" for="celular">Celular:</label>
+                <input id="celular" type="tel" class="contacto__campo contacto__campo--tel">
+
+                <label class="contacto__etiqueta" for="correo">Email:</label>
+                <input id="correo" type="email" class="contacto__campo contacto__campo--email">
+
+                <label class="contacto__etiqueta" for="mensaje">Mensaje:</label>
+                <textarea id="mensaje" class="contacto__campo contacto__campo--mensaje"></textarea>
+
+                <div class="contacto__acciones">
+                    <input type="submit" value="Enviar" class="contacto__boton contacto__boton--enviar">
+                    <input type="reset" value="Reiniciar" class="contacto__boton contacto__boton--reiniciar">
+                </div>
+            </form>
+        </section>
+
+        <!-- Info ubicación / horario / mapa / video -->
+        <section class="info-local">
+            <div class="info-local__mapa">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52990.72059106094!2d-60.60268105408957!3d-33.891713182217046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b84aad3ef60a31%3A0x481ac3277962e9c5!2sPergamino%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1758831870890!5m2!1ses-419!2sar"
-                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    width="595" height="395" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
-                <hr>
-                <p class="Contacto">📍 Pergamino, Buenos Aires</p>
-                <p class="Contacto">🕐 Lunes a sábado de 9 a 18 hs</p>
-                <hr>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/rnacVSVN47A?si=_d1kC0DZtR4pCziz"
+            </div>
+
+            <div class="info-local__detalles">
+                <p class="info-local__dato">📍 Pergamino, Buenos Aires</p>
+                <p class="info-local__dato">🕐 Lunes a sábado de 9 a 18 hs</p>
+            </div>
+
+            <div class="info-local__video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/rnacVSVN47A?si=NXjaxK2xmsV2PzPn"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <p class="frase">💜 En Click&Shop, tu compra es tan fácil como un clic.</p>
-            </section>
-            <br><br>
+
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/NONVl_7D_PQ?si=aq_bhfRx4suTSna2"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+
+            <p class="info-local__frase">
+                💜 En Click&Shop, tu compra es tan fácil como un clic.
+            </p>
         </section>
-        <section class="whatsapp">
-            <a href="https://wa.me/5492477454622" target="_blank">
-                <img src="../assets/whatsapp.png" alt="WhatsApp" class="imagenw">
+
+        <!-- Botón flotante WhatsApp -->
+        <section class="boton-whatsapp">
+            <a href="https://wa.me/5492477454622" target="_blank" class="boton-whatsapp__enlace"
+                aria-label="Contactar por WhatsApp">
+                <img src="../assets/whatsapp.png" alt="WhatsApp" class="boton-whatsapp__icono">
             </a>
         </section>
+
     </main>
 
-    <footer>
-        <section>
-            <h3>Derechos reservados de autor // Creado por Juan Fram</h3>
+    <!-- ===== PIE DE PÁGINA ===== -->
+    <footer class="pie">
+        <section class="pie__superior">
+            <h3 class="pie__legal">Derechos reservados de autor // Creado por Juan Fram</h3>
         </section>
-        <ul class="redes-sociales">
-            <li>
-                <img src="../assets/instagram.png" alt="Logo Instagram" class="imgredes">
+
+        <!-- Redes sociales -->
+        <ul class="redes">
+            <li class="redes__item">
+                <img src="../assets/instagram.png" alt="Logo Instagram" class="redes__icono">
                 <a href="https://www.instagram.com/juanfram5/?next=%2F" target="_blank" style="text-decoration: none;"
-                    class="redes">Instagram</a>
+                    class="redes__link">Instagram</a>
             </li>
-            <li>
-                <img src="../assets/facebook.png" alt="Logo Facebook" class="imgredes">
+            <li class="redes__item">
+                <img src="../assets/facebook.png" alt="Logo Facebook" class="redes__icono">
                 <a href="https://www.facebook.com/juan.fran.334" target="_blank" style="text-decoration: none;"
-                    class="redes">Facebook</a>
-            </li>
+                    class="redes__link">Facebook</a>
+            </li class="redes__item">
             <li>
-                <img src="../assets/linkedin.png" alt="Logo Linkedin" class="imgredes">
+                <img src="../assets/linkedin.png" alt="Logo Linkedin" class="redes__icono">
                 <a href="https://www.linkedin.com/in/juanfram-networking/" target="_blank"
-                    style="text-decoration: none;" class="redes">Linkedin</a>
+                    style="text-decoration: none;" class="redes__link">Linkedin</a>
             </li>
         </ul>
-        <h4>Click&Shop</h4>
+        <h4 class="pie__marca">Click&Shop</h4>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
