--- a/index.html
+++ b/index.html
@@ -14,53 +14,81 @@
     <!-- ===== ENCABEZADO ===== -->
     <header class="encabezado">
         <section class="encabezado__contenido">
-            <a href="./index.html" class="encabezado__marca">
-                <img src="./assets/Logo.png" alt="Imagen de Click&Shop" class="encabezado__logo">
-            </a>
-
-            <!-- Título de la página -->
-            <h1 class="encabezado__titulo">Inicio</h1>
-
-            <!-- Navegación principal -->
-            <nav class="navegacion-principal">
-                <ul class="navegacion-principal__lista">
-                    <li class="navegacion-principal__item navegacion-principal__item--activo">
-                        <a href="./index.html" style="text-decoration: none;" class="navegacion-principal__enlace">Inicio</a>
-                    </li>
-                    <li class="navegacion-principal__item">
-                        <a href="./ventanas/informacion.html" style="text-decoration: none;"
-                            class="navegacion-principal__enlace">Información de
-                            nosotros</a>
-                    </li>
-                    <li class="navegacion-principal__item">
-                        <a href="./ventanas/catalogo.html" style="text-decoration: none;"
-                            class="navegacion-principal__enlace">Catálogo</a>
-                    </li>
-                    <li class="navegacion-principal__item">
-                        <a href="./ventanas/carrito.html" style="text-decoration: none;"
-                            class="navegacion-principal__enlace">Carrito</a>
-                    </li>
-                    <li class="navegacion-principal__item">
-                        <a href="./ventanas/recetas.html" style="text-decoration: none;"
-                            class="navegacion-principal__enlace">Recetas</a>
-                    </li>
-                    <li class="navegacion-principal__item">
-                        <a href="./ventanas/contacto.html" style="text-decoration: none;"
-                            class="navegacion-principal__enlace">Contacto</a>
-                    </li>
-                </ul>
+            <nav class="navbar navbar-expand-lg navegacion-principal d-flex justify-content-around w-100">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="./index.html">
+                        <img src="./assets/Logo.png" alt="Imagen de Click&Shop" class="encabezado__logo">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav navegacion-principal__lista">
+                            <li class="nav-item navegacion-principal__item">
+                                <a class="nav-link navegacion-principal__enlace active" aria-current="page"
+                                    href="./index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item navegacion-principal__item">
+                                <a class="nav-link navegacion-principal__enlace"
+                                    href="./ventanas/informacion.html">Información de nosotros</a>
+                            </li>
+                            <li class="nav-item navegacion-principal__item">
+                                <a class="nav-link navegacion-principal__enlace"
+                                    href="./ventanas/catalogo.html">Catálogo</a>
+                            </li>
+                            <li class="nav-item navegacion-principal__item">
+                                <a class="nav-link navegacion-principal__enlace"
+                                    href="./ventanas/carrito.html">Carrito</a>
+                            </li>
+                            <li class="nav-item navegacion-principal__item">
+                                <a class="nav-link navegacion-principal__enlace"
+                                    href="./ventanas/recetas.html">Recetas</a>
+                            </li>
+                            <li class="nav-item navegacion-principal__item">
+                                <a class="nav-link navegacion-principal__enlace"
+                                    href="./ventanas/contacto.html">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </nav>
         </section>
     </header>
 
     <!-- ===== CONTENIDO PRINCIPAL ===== -->
     <main class="principal">
+        
+        <!-- Carrusel de imágenes destacado -->
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
 
-        <!-- Sección destacada / carrusel -->
-        <section class="destacado">
-            <img src="./assets/Imagen del carrusel.png" alt="carrusel" class="destacado__imagen">
-            <img src="./assets/Imagen del carrusel 2.png" alt="carrusel" class="destacado__imagen">
-        </section>
+                <div class="carousel-item active">
+                    <img src="./assets/Imagen Carrusel 2.png" class="d-block w-100" alt="destacado__imagen">
+                </div>
+
+                <div class="carousel-item">
+                    <img src="./assets/Imagen Carrusel 3.png" class="d-block w-100" alt="destacado__imagen">
+                </div>
+
+                <div class="carousel-item">
+                    <img src="./assets/Imagen Carrusel 1.png" class="d-block w-100" alt="destacado__imagen">
+                </div>
+
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Anterior</span>
+            </button>
+
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Siguiente</span>
+            </button>
+        </div>
+
 
         <!-- Formulario de inicio de sesión -->
         <section class="acceso">
