--- a/ventanas/recetas.html
+++ b/ventanas/recetas.html
@@ -11,46 +11,46 @@
 </head>
 
 <body>
-
     <!-- ===== ENCABEZADO ===== -->
     <header class="encabezado">
         <section class="encabezado__contenido">
-            <a href="../index.html" class="encabezado__marca">
-                <img src="../assets/Logo.png" alt="Imagen de Click&Shop" class="encabezado__logo">
-            </a>
-
-            <!-- Título de la página -->
-            <h1 class="encabezado__titulo">Recetas</h1>
-
-            <!-- Navegación principal -->
-            <nav class="navegacion-principal">
-                <ul class="navegacion-principal__lista">
-                    <li class="navegacion-principal__item">
-                        <a href="../index.html" style="text-decoration: none;"
-                            class="navegacion-principal__enlace">Inicio</a>
-                    </li>
-                    <li class="navegacion-principal__item">
-                        <a href="./informacion.html" style="text-decoration: none;"
-                            class="navegacion-principal__enlace">Información de
-                            nosotros</a>
-                    </li>
-                    <li class="navegacion-principal__item">
-                        <a href="./catalogo.html" style="text-decoration: none;"
-                            class="navegacion-principal__enlace">Catálogo</a>
-                    </li>
-                    <li class="navegacion-principal__item">
-                        <a href="./carrito.html" style="text-decoration: none;"
-                            class="navegacion-principal__enlace">Carrito</a>
-                    </li>
-                    <li class="navegacion-principal__item navegacion-principal__item--activo">
-                        <a href="./recetas.html" style="text-decoration: none;"
-                            class="navegacion-principal__enlace">Recetas</a>
-                    </li>
-                    <li class="navegacion-principal__item">
-                        <a href="./contacto.html" style="text-decoration: none;"
-                            class="navegacion-principal__enlace">Contacto</a>
-                    </li>
-                </ul>
+            <nav class="navbar navbar-expand-lg navegacion-principal d-flex justify-content-around w-100">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="../index.html">
+                        <img src="../assets/Logo.png" alt="Imagen de Click&Shop" class="encabezado__logo">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav navegacion-principal__lista">
+                            <li class="nav-item navegacion-principal__item">
+                                <a class="nav-link navegacion-principal__enlace" href="../index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item navegacion-principal__item">
+                                <a class="nav-link navegacion-principal__enlace" 
+                                    href="./informacion.html">Información de nosotros</a>
+                            </li>
+                            <li class="nav-item navegacion-principal__item">
+                                <a class="nav-link navegacion-principal__enlace"
+                                    href="./catalogo.html">Catálogo</a>
+                            </li>
+                            <li class="nav-item navegacion-principal__item">
+                                <a class="nav-link navegacion-principal__enlace" 
+                                    href="./carrito.html">Carrito</a>
+                            </li>
+                            <li class="nav-item navegacion-principal__item">
+                                <a class="nav-link navegacion-principal__enlace active" aria-current="page"
+                                    href="./recetas.html">Recetas</a>
+                            </li>
+                            <li class="nav-item navegacion-principal__item">
+                                <a class="nav-link navegacion-principal__enlace"
+                                    href="./contacto.html">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </nav>
         </section>
     </header>
@@ -70,31 +70,162 @@
             </a>
         </section>
 
-        <h3>Receta: Arroz con pollo</h3>
-        <div class="receta">
-            <div class="receta__ingrediente">Ingrediente</div>
-            <div class="receta__ingrediente">Cantidad</div>
-            <div class="receta__ingrediente">Pechuga o muslo de pollo deshuesado</div>
-            <div class="receta__ingrediente">1 unidad</div>
-            <div class="receta__ingrediente">Arroz</div>
-            <div class="receta__ingrediente">2 tazas</div>
-            <div class="receta__ingrediente">Cebolla</div>
-            <div class="receta__ingrediente">1 unidad</div>
-            <div class="receta__ingrediente">Zanahoria</div>
-            <div class="receta__ingrediente">1 unidad</div>
-            <div class="receta__ingrediente">Ajo</div>
-            <div class="receta__ingrediente">2 dientes</div>
-            <div class="receta__ingrediente">Aceite</div>
-            <div class="receta__ingrediente">1 cucharada</div>
-            <div class="receta__ingrediente">Pimentón</div>
-            <div class="receta__ingrediente">1 cucharadita</div>
-            <div class="receta__ingrediente">Sal y pimienta</div>
-            <div class="receta__ingrediente">A gusto</div>
-            <div class="receta__ingrediente">Caldo de pollo o verduras</div>
-            <div class="receta__ingrediente">4 tazas</div>
-            <div class="receta__ingrediente">Arvejas o maíz</div>
-            <div class="receta__ingrediente">Opcional</div>
-        </div>
+        <section class="receta">
+            <h3 class="receta__titulo">Primera receta: Arroz con pollo</h3>
+            <div class="receta__tabla">
+                <div class="receta__fila receta__fila--encabezado">
+                    <div class="receta__columna receta__columna--ingrediente">Ingrediente</div>
+                    <div class="receta__columna receta__columna--cantidad">Cantidad</div>
+                </div>
+
+                <div class="receta__fila">
+                    <div class="receta__columna receta__columna--ingrediente">Arroz</div>
+                    <div class="receta__columna receta__columna--cantidad">1 taza</div>
+                </div>
+
+                <div class="receta__fila">
+                    <div class="receta__columna receta__columna--ingrediente">Cebolla</div>
+                    <div class="receta__columna receta__columna--cantidad">1 unidad</div>
+                </div>
+
+                <div class="receta__fila">
+                    <div class="receta__columna receta__columna--ingrediente">Zanahoria</div>
+                    <div class="receta__columna receta__columna--cantidad">1 unidad</div>
+                </div>
+
+                <div class="receta__fila">
+                    <div class="receta__columna receta__columna--ingrediente">Pechuga o muslo de pollo deshuesado</div>
+                    <div class="receta__columna receta__columna--cantidad">2 tazas</div>
+                </div>
+
+                <div class="receta__fila">
+                    <div class="receta__columna receta__columna--ingrediente">Ajo</div>
+                    <div class="receta__columna receta__columna--cantidad">2 dientes</div>
+                </div>
+
+                <div class="receta__fila">
+                    <div class="receta__columna receta__columna--ingrediente">Aceite</div>
+                    <div class="receta__columna receta__columna--cantidad">1 cucharada</div>
+                </div>
+
+                <div class="receta__fila">
+                    <div class="receta__columna receta__columna--ingrediente">Pimentón</div>
+                    <div class="receta__columna receta__columna--cantidad">1 cucharadita</div>
+                </div>
+
+                <div class="receta__fila">
+                    <div class="receta__columna receta__columna--ingrediente">Sal y pimienta</div>
+                    <div class="receta__columna receta__columna--cantidad">A gusto</div>
+                </div>
+
+                <div class="receta__fila">
+                    <div class="receta__columna receta__columna--ingrediente">Caldo de pollo o verduras</div>
+                    <div class="receta__columna receta__columna--cantidad">4 tazas</div>
+                </div>
+
+                <div class="receta__fila">
+                    <div class="receta__columna receta__columna--ingrediente">Arvejas o maíz</div>
+                    <div class="receta__columna receta__columna--cantidad">Opcional</div>
+                </div>
+            </div>
+
+            <img src="../assets/Arroz con pollo.jpg" alt="Imagen de arroz con pollo" class="receta__imagen">
+
+            <div>
+                <h3 class="receta__titulo receta__titulo2">👩‍🍳 Preparación</h3>
+                <ol class="receta__preparacion">
+                    <li class="receta__pasos">En una olla grande, calentá el aceite y dorá el pollo cortado en cubos.
+                    </li>
+                    <li class="receta__pasos">Agregá la cebolla, el morrón, la zanahoria rallada y el ajo picado. Rehogá
+                        todo por unos
+                        minutos.</li>
+                    <li class="receta__pasos">Sumá el arroz y mezclá bien para que se impregne de sabor.</li>
+                    <li class="receta__pasos">Condimentá con pimentón, sal y pimienta.</li>
+                    <li class="receta__pasos">Incorporá el caldo caliente y cociná a fuego medio con la olla semi
+                        tapada, hasta que el arroz
+                        esté tierno (unos 20 minutos).</li>
+                    <li class="receta__pasos">Antes de apagar el fuego, podés agregar arvejas o maíz para darle un toque
+                        de color.</li>
+                    <li class="receta__pasos">Servir y disfrutar</li>
+                </ol>
+            </div>
+        </section>
+
+        <section class="receta">
+            <h3 class="receta__titulo">Segunda receta: Fideos con salsa cremosa de pollo y verduras</h3>
+            <div class="receta__tabla">
+                <div class="receta__fila receta__fila--encabezado">
+                    <div class="receta__columna receta__columna--ingrediente">Ingrediente</div>
+                    <div class="receta__columna receta__columna--cantidad">Cantidad</div>
+                </div>
+
+                <div class="receta__fila">
+                    <div class="receta__columna receta__columna--ingrediente">Fideos</div>
+                    <div class="receta__columna receta__columna--cantidad">400 g</div>
+                </div>
+
+                <div class="receta__fila">
+                    <div class="receta__columna receta__columna--ingrediente">Pechuga de pollo</div>
+                    <div class="receta__columna receta__columna--cantidad">1 unidad</div>
+                </div>
+
+                <div class="receta__fila">
+                    <div class="receta__columna receta__columna--ingrediente">Cebolla</div>
+                    <div class="receta__columna receta__columna--cantidad">1 unidad</div>
+                </div>
+
+                <div class="receta__fila">
+                    <div class="receta__columna receta__columna--ingrediente">Zanahoria</div>
+                    <div class="receta__columna receta__columna--cantidad">1 unidad</div>
+                </div>
+
+                <div class="receta__fila">
+                    <div class="receta__columna receta__columna--ingrediente">Morrón rojo o verde</div>
+                    <div class="receta__columna receta__columna--cantidad">1/2 unidad</div>
+                </div>
+
+                <div class="receta__fila">
+                    <div class="receta__columna receta__columna--ingrediente">Crema de leche o queso crema</div>
+                    <div class="receta__columna receta__columna--cantidad">200 cc</div>
+                </div>
+
+                <div class="receta__fila">
+                    <div class="receta__columna receta__columna--ingrediente">Aceite</div>
+                    <div class="receta__columna receta__columna--cantidad">1 cucharada</div>
+                </div>
+
+                <div class="receta__fila">
+                    <div class="receta__columna receta__columna--ingrediente">Sal y pimienta</div>
+                    <div class="receta__columna receta__columna--cantidad">A gusto</div>
+                </div>
+
+                <div class="receta__fila">
+                    <div class="receta__columna receta__columna--ingrediente">Queso rallado</div>
+                    <div class="receta__columna receta__columna--cantidad">Opcional</div>
+                </div>
+            </div>
+
+            <img src="../assets/Fideos con salsa cremosa de pollo y verduras.jpg"
+                alt="Imagen de Fideos con salsa cremosa de pollo y verduras" class="receta__imagen">
+
+
+            <div>
+                <h3 class="receta__titulo receta__titulo2">👩‍🍳 Preparación</h3>
+                <ol class="receta__preparacion">
+                    <li class="receta__pasos">Herví los fideos en abundante agua con sal hasta que estén al dente.
+                    </li>
+                    <li class="receta__pasos">En una sartén grande, calentá el aceite y dorá los cubos de pollo hasta
+                        que estén cocidos.</li>
+                    <li class="receta__pasos">Agregá la cebolla, la zanahoria rallada y el morrón picado. Rehogá unos
+                        minutos.</li>
+                    <li class="receta__pasos">Bajá el fuego y añadí la crema o el queso crema. Mezclá hasta que la salsa
+                        quede bien integrada y cremosa.</li>
+                    <li class="receta__pasos">Condimentá con sal, pimienta y orégano.</li>
+                    <li class="receta__pasos">Escurrí los fideos y mezclalos con la salsa.</li>
+                    <li class="receta__pasos">Servir y disfrutar</li>
+                </ol>
+            </div>
+        </section>
     </main>
 
     <!-- ===== PIE DE PÁGINA ===== -->
