Actualizo archivos locales

--- a/ventanas/contacto.html
+++ b/ventanas/contacto.html
@@ -66,16 +66,16 @@
 
             <form class="contacto__formulario">
                 <label class="contacto__etiqueta" for="nombre">Nombre:</label>
-                <input id="nombre" type="text" class="contacto__campo contacto__campo--texto">
+                <input id="nombre" type="text" class="contacto__campo contacto__campo--texto" required>
 
                 <label class="contacto__etiqueta" for="celular">Celular:</label>
-                <input id="celular" type="tel" class="contacto__campo contacto__campo--tel">
+                <input id="celular" type="tel" class="contacto__campo contacto__campo--tel" required>
 
                 <label class="contacto__etiqueta" for="correo">Email:</label>
-                <input id="correo" type="email" class="contacto__campo contacto__campo--email">
+                <input id="correo" type="email" class="contacto__campo contacto__campo--email" required>
 
                 <label class="contacto__etiqueta" for="mensaje">Mensaje:</label>
-                <textarea id="mensaje" class="contacto__campo contacto__campo--mensaje"></textarea>
+                <textarea id="mensaje" class="contacto__campo contacto__campo--mensaje" required></textarea>
 
                 <div class="contacto__acciones">
                     <input type="submit" value="Enviar" class="contacto__boton contacto__boton--enviar">
