Actualizacion mapas/videos

--- a/ventanas/contacto.html
+++ b/ventanas/contacto.html
@@ -29,20 +29,17 @@
                                 <a class="nav-link navegacion-principal__enlace" href="../index.html">Inicio</a>
                             </li>
                             <li class="nav-item navegacion-principal__item">
-                                <a class="nav-link navegacion-principal__enlace" 
-                                    href="./informacion.html">Información de nosotros</a>
+                                <a class="nav-link navegacion-principal__enlace" href="./informacion.html">Información
+                                    de nosotros</a>
                             </li>
                             <li class="nav-item navegacion-principal__item">
-                                <a class="nav-link navegacion-principal__enlace"
-                                    href="./catalogo.html">Catálogo</a>
+                                <a class="nav-link navegacion-principal__enlace" href="./catalogo.html">Catálogo</a>
                             </li>
                             <li class="nav-item navegacion-principal__item">
-                                <a class="nav-link navegacion-principal__enlace" 
-                                    href="./carrito.html">Carrito</a>
+                                <a class="nav-link navegacion-principal__enlace" href="./carrito.html">Carrito</a>
                             </li>
                             <li class="nav-item navegacion-principal__item">
-                                <a class="nav-link navegacion-principal__enlace" 
-                                    href="./recetas.html">Recetas</a>
+                                <a class="nav-link navegacion-principal__enlace" href="./recetas.html">Recetas</a>
                             </li>
                             <li class="nav-item navegacion-principal__item">
                                 <a class="nav-link navegacion-principal__enlace active" aria-current="page"
@@ -89,7 +86,7 @@
             <div class="info-local__mapa">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52990.72059106094!2d-60.60268105408957!3d-33.891713182217046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b84aad3ef60a31%3A0x481ac3277962e9c5!2sPergamino%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1758831870890!5m2!1ses-419!2sar"
-                    width="595" height="395" style="border:0;" allowfullscreen="" loading="lazy"
+                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
             </div>
@@ -100,15 +97,18 @@
             </div>
 
             <div class="info-local__video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/rnacVSVN47A?si=NXjaxK2xmsV2PzPn"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/NONVl_7D_PQ?si=aq_bhfRx4suTSna2"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div class="video-container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/rnacVSVN47A?si=NXjaxK2xmsV2PzPn"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <div class="video-container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/NONVl_7D_PQ?si=aq_bhfRx4suTSna2"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
             </div>
 
             <p class="info-local__frase">
