--- a/ventanas/informacion.html
+++ b/ventanas/informacion.html
@@ -60,8 +60,8 @@
 
         <!--Información del Supermercado-->
         <Section class="informacion-tienda">
-            <h3 class="informacion-tienda__titulo">🌟 Sobre Nosotros - Click&Shop</h3>
-            <p class="informacion-tienda__parrafo">Detrás de Click&Shop hay una historia personal y un sueño que fue
+            <h3 class="informacion-tienda__titulo"> <strong>🌟 Información Sobre Nosotros - Click&Shop</strong></h3>
+            <p class="informacion-tienda__parrafo">Detrás de <strong>Click&Shop</strong> hay una historia personal y un sueño que fue
                 tomando forma con el tiempo. Mi nombre es
                 Juan Fram y siempre me apasionó la idea de emprender proyectos que sumen valor real a la vida de las
                 personas. Observando la rutina diaria, me di cuenta de que muchas veces las compras del supermercado
@@ -70,10 +70,10 @@
                 nos hace felices: estar con nuestra familia, compartir con amigos o simplemente descansar.</p>
             <p class="informacion-tienda__parrafo">Fue entonces cuando decidí dar un paso adelante y crear un espacio
                 diferente: un supermercado online pensado
-                para simplificar la vida cotidiana. Así nació Click&Shop, con el propósito de transformar una obligación
+                para simplificar la vida cotidiana. Así nació <strong>Click&Shop</strong>, con el propósito de transformar una obligación
                 en
                 una experiencia positiva, rápida y agradable.</p>
-            <p class="informacion-tienda__parrafo">Pero Click&Shop no es solo una tienda virtual: es un proyecto
+            <p class="informacion-tienda__parrafo">Pero <strong>Click&Shop</strong> no es solo una tienda virtual: es un proyecto
                 construido desde el corazón, con la convicción
                 de que hacer las cosas más fáciles también es una forma de dar felicidad. Cada producto que ofrecemos,
                 cada
@@ -85,11 +85,11 @@
                 una
                 experiencia de compra segura, confiable y simple. Porque creemos que la confianza se gana con hechos:
                 entregando a tiempo, cumpliendo con lo prometido y cuidando cada detalle.</p>
-            <p class="informacion-tienda__parrafo">En Click&Shop nos mueve un sueño: que cada pedido llegue acompañado
+            <p class="informacion-tienda__parrafo">En <strong>Click&Shop</strong> nos mueve un sueño: que cada pedido llegue acompañado
                 de la satisfacción de haber elegido un
                 servicio que facilita la vida. Nuestra meta es estar presentes en esos pequeños grandes momentos, siendo
                 parte del día a día de las familias y contribuyendo a que las rutinas sean más llevaderas.</p>
-            <p class="informacion-tienda__parrafo">✨ Click&Shop: porque comprar puede ser fácil, rápido… y también una
+            <p class="informacion-tienda__parrafo">✨ <strong>Click&Shop</strong>: porque comprar puede ser fácil, rápido… y también una
                 experiencia que regala sonrisas.</p>
         </section>
 
